k8s/expense-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: expense-tracker
  namespace: expense-tracker

spec:
  replicas: 1

  selector:
    matchLabels:
      app: expense-tracker

  template:
    metadata:
      labels:
        app: expense-tracker

    spec:
      containers:
      - name: expense-tracker
        image: rakeshsharma620/expense-tracker:latest

        ports:
        - containerPort: 8080

        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"

        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 10

        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 5
