k8s/expense-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: expense-tracker
  namespace: expense-tracker

spec:
  type: NodePort

  selector:
    app: expense-tracker

  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
